--- a/07_notaParaConceito.html
+++ b/07_notaParaConceito.html
@@ -10,10 +10,11 @@
     // Entre 5.9 e zero            E
 
     //Entrada
-
+    const nota = Number(prompt("Qual a sua nota?"))
 
     //Processamento
-
+    let con = ""
+    (nota >= 9) ? con = "A" : (nota >= 8) ? con = "B" : (nota >= 7) ? con = 
     
     //Saída
 
