--- a/07_notaParaConceito.html
+++ b/07_notaParaConceito.html
@@ -10,12 +10,13 @@
     // Entre 5.9 e zero            E
 
     //Entrada
-    const nota = Number(prompt("Qual a sua nota?"))
+    const nota = Number(prompt("Qual a sua nota?"));
 
     //Processamento
-    let con = ""
-    (nota >= 9) ? con = "A" : (nota >= 8) ? con = "B" : (nota >= 7) ? con = 
+    let con = "";
+    (nota >= 9) ? con = "A" : (nota >= 8) ? con = "B" : (nota >= 7) ? con = "C" : (nota >= 6) ? con = "D" : (nota <= 5.9) ? con = "E"
     
     //Saída
+    alert("O conceito da sua nota é " + con)
 
 </script>
