--- a/02_eleitor.html
+++ b/02_eleitor.html
@@ -4,7 +4,7 @@
     //Considerando que no Brasil é possível votar a partir dos 16 anos de idade, leia o ano de nascimento de uma pessoa e informe se ela poderá votar no ano atual. Ignore mês e dia de nascimento.
 
     //Entrada
-    const year = Number(prompt("Em que ano você nasceu?"))
+    const year = Number(prompt("Em que ano você nasceu?"));
 
     
     //Saída
