--- a/04_vogal.html
+++ b/04_vogal.html
@@ -4,7 +4,7 @@
     //Construa um programa que leia um caractere e informe se este caractere é uma vogal.
 
     //Entrada
-    const letra = prompt("Me diga uma letra.").toUpperCase()
+    const letra = prompt("Me diga uma letra.").toUpperCase();
 
     //Processamento
     (letra == "A" || letra == "E" || letra == "I" || letra == "O" || letra == "U") ? alert("Essa letra é uma vogal.") : alert("Essa letra não é uma vogal.")
