--- a/09_valorHoraTrabalhada.html
+++ b/09_valorHoraTrabalhada.html
@@ -8,11 +8,15 @@
     // Apresente o salário final recebido pelo funcionário semanalmente e o preço de cada hora trabalhada.
 
     //Entrada
-
+    const horas = Number(prompt("Quantas horas você trabalha por semana?"))
+    const preH1 = Number(prompt("Quanto você recebe por hora trabalhada?"))
 
     //Processamento
-
-    
+    let acrescimo = 0;
+    (horas <= 45) ? acrescimo = 0 : (horas <= 60) ? acrescimo = 0.2 : (horas > 60) ? acrescimo = 0.3 : alert("Você digitou um número negativo.");
+    const total = (horas * preH) + ((horas * preH) * acrescimo);
+    const preH2 = total / horas;
     //Saída
+    alert("Você receberá R$" + total + " semanalmente, e o preço por hora trabalhada é  de R$" + preH2);
 
 </script>
