--- a/08_meioDeTransporte.html
+++ b/08_meioDeTransporte.html
@@ -14,6 +14,6 @@
     const preC = preL * quantidade;
     
     //Saída
-    (preC < preT) ? alert("O meio de transporte mais barato é o carro, onde você gastará R$" + preC + " diariamente.") : (preT > custoCarro) ? alert("O meio de transporte mais barato é o transporte público, onde você gastará R$" + preT + " diariamente.")
+    (preC < preT) ? alert("O meio de transporte mais barato é o carro, onde você gastará R$" + preC + " diariamente.") : (preT > custoCarro) ? alert("O meio de transporte mais barato é o transporte público, onde você gastará R$" + preT + " diariamente.") : alert("Os dois tem o mesmo preço.")
     
 </script>
