--- a/09_valorHoraTrabalhada.html
+++ b/09_valorHoraTrabalhada.html
@@ -9,7 +9,7 @@
 
     //Entrada
     const horas = Number(prompt("Quantas horas você trabalha por semana?"))
-    const preH1 = Number(prompt("Quanto você recebe por hora trabalhada?"))
+    const preH = Number(prompt("Quanto você recebe por hora trabalhada?"))
 
     //Processamento
     let acrescimo = 0;
