--- a/06_idadeHumana.html
+++ b/06_idadeHumana.html
@@ -14,8 +14,9 @@
     //Processamento
     let ageHuman = 0;
 
-    (dog == "P") ? ageHuman = ageDog * 5 : (dog == "M") ? ageHuman = ageDog * 6 : (dog == "P") ? ageHuman = ageDog * 7;
+    (dog == "P") ? ageHuman = ageDog * 5 : (dog == "M") ? ageHuman = ageDog * 6 : (dog == "G") ? ageHuman = ageDog * 7 : null;
     
     //Saída
     (dog == "P" || dog == "M" || dog == "G") ? alert("A idade do seu cachorro em eslaca humana é de " + ageHuman + " anos.") : alert("Você escreveu o tamanho do seu cachorro errado.")
+
 </script>
