--- a/07_notaParaConceito.html
+++ b/07_notaParaConceito.html
@@ -14,7 +14,7 @@
 
     //Processamento
     let con = "";
-    (nota >= 9) ? con = "A" : (nota >= 8) ? con = "B" : (nota >= 7) ? con = "C" : (nota >= 6) ? con = "D" : (nota <= 5.9) ? con = "E"
+    (nota >= 9) ? con = "A" : (nota >= 8) ? con = "B" : (nota >= 7) ? con = "C" : (nota >= 6) ? con = "D" : (nota <= 5.9) ? con = "E" : null;
     
     //Saída
     alert("O conceito da sua nota é " + con)
